# cp

./: .autocp  1890A  1890A.cpp  1896A  1896A.cpp  1899A  1899A.cpp  1900A  1900A.cpp  1901A  1901A.cpp  1903A  1903A.cpp  2068PrbB.cpp  2068Prba.cpp  2071A  2071A.cpp  2071B  2071B.cpp  2072A  2072A.cpp  2072B.cpp  2072C  2072C.cpp  2093A  2093A.cpp  2093C  2093C.cpp  514ProbA  514ProbA.cpp  A_2_n_2_n.cpp  A_Don_t_Try_to_Count.cpp  A_Doremy_s_Paint_3  A_Doremy_s_Paint_3.cpp  A_Dr_TC.cpp  A_El_fucho.cpp  A_How_Much_Does_Daytona_Cost.cpp  A_Jagged_Swaps  A_Jagged_Swaps.cpp  A_Permutation_Warm_Up  (+34 more)
.cph/: .A_2_n_2_n.cpp_f5ff887ac43c8102f4a9175cded039d6.prob  .A_Don_t_Try_to_Count.cpp_c3315f2b62ea98a45d69fa463be892b4.prob  .A_Doremy_s_Paint_3.cpp_2dd941be914ce09e957134e9cfd7d22b.prob  .A_Dr_TC.cpp_5aadeac4bd9cf6c37fee122c8aaa9b37.prob  .A_El_fucho.cpp_df2b4b7746f772b6005c6dfb26661c03.prob  .A_How_Much_Does_Daytona_Cost.cpp_faac6b9e50ff3e2d431724ebf52cff7c.prob  .A_Jagged_Swaps.cpp_b68966953a530afdd222b0a658bc77fb.prob  .A_Permutation_Warm_Up.cpp_d1bd9747583c9df01d78b8a5900adb71.prob  .A_Three_Decks.cpp_eb194a36eb2191bd46efbcf58a6e7b10.prob  .B_Abraham_s_Great_Escape.cpp_65a92cc3e4e7673677671087243dc18d.prob  .B_Happy_Number.cpp_20d62ae620885cd8925115b8e148af78.prob  .B_Move_to_the_End.cpp_9e50c0ecb24c9e9ef945640d899b8160.prob  .C_2026.cpp_57ad068ef1ee059ab95911e8b8b47d9c.prob  .C_2026.java_6fd92456a7585d55e540d04c6ff0bc7a.prob  .C_Alternated.cpp_3dd72300c15f0c5cc4e6fa01dc139933.prob  .C_Card_Game.cpp_ec12602848a9e3e4e385dac312b5f194.prob  .D_Forbidden_List_2.cpp_c10f88f0961510dad05b3ce6fd65f3e6.prob  .D_Kadomatsu_Subsequence.cpp_e8b617d5f0cdacfc2a267559c0c8a8b7.prob
1890A.dSYM/Contents/Resources/DWARF/: 1890A
1896A.dSYM/Contents/Resources/DWARF/: 1896A
1899A.dSYM/Contents/Resources/DWARF/: 1899A
1900A.dSYM/Contents/Resources/DWARF/: 1900A
1901A.dSYM/Contents/Resources/DWARF/: 1901A
1903A.dSYM/Contents/Resources/DWARF/: 1903A
2093A.dSYM/Contents/: Info.plist
2093A.dSYM/Contents/Resources/DWARF/: 2093A
2093C.dSYM/Contents/: Info.plist
2093C.dSYM/Contents/Resources/DWARF/: 2093C
A_Doremy_s_Paint_3.dSYM/Contents/: Info.plist
A_Doremy_s_Paint_3.dSYM/Contents/Resources/DWARF/: A_Doremy_s_Paint_3
A_Jagged_Swaps.dSYM/Contents/: Info.plist
A_Jagged_Swaps.dSYM/Contents/Resources/DWARF/: A_Jagged_Swaps
A_Permutation_Warm_Up.dSYM/Contents/: Info.plist
A_Permutation_Warm_Up.dSYM/Contents/Resources/DWARF/: A_Permutation_Warm_Up
AtCoder - AtCoder Beginner Contest 440/: A___Octave.cpp  B___Trifecta.cpp  C___Striped_Horse.cpp
B_Move_to_the_End.dSYM/Contents/: Info.plist
B_Move_to_the_End.dSYM/Contents/Resources/DWARF/: B_Move_to_the_End
CSES - CSES Problem Set/: Missing_Number.cpp  Weird_Algorithm.cpp
C_Card_Game.dSYM/Contents/: Info.plist
C_Card_Game.dSYM/Contents/Resources/DWARF/: C_Card_Game
CodeChef - START220/: Two_Pile_Game.cpp
CodeChef - START220D/: Two_Pile_Game.cpp
Codeforces - COMPFEST 15 - Preliminary Online Mirror Unrated ICPC Rules Teams Preferred/: A_Ambitious_Kid.cpp
Codeforces - Codeforces Round 894 Div 3/: B_Sequence_Game.cpp
Codeforces - Codeforces Round 898 Div 4/: C_Target_Practice.cpp
Codeforces - Codeforces Round 900 Div 3/: A_How_Much_Does_Daytona_Cost.cpp
Codeforces - Codeforces Round 902 Div 2 based on COMPFEST 15 - Final Round/: A_Goals_of_Victory.cpp
